--- a/mfa.html
+++ b/mfa.html
@@ -75,7 +75,8 @@
 		<a href="citizenship.html">Apply for Citizenship</a>
 		<a href="party.html">Ligmite Communist Party</a>
 		<a href="military.html">LDF</a>
-		<img src="icons/ligmite_flag.png" width="30" height="15" class="top-bar_flag">
+		<a href="mfa.html"><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
+		<a href="mfa_russian.html"><img src="icons/russian_flag.png" width="30" height="15" class="top-bar_flag"></a>
 	</div>
 	<h1 class="backgrounded">Ministry of Foreign Affairs of The Free State of Ligma</h1>
 	<div id="adi">
