--- a/military.html
+++ b/military.html
@@ -75,17 +75,22 @@
 		<a href="citizenship.html">Apply for Citizenship</a>
 		<a href="party.html">Ligmite Communist Party</a>
 		<a href="military.html">LDF</a>
-		<img src="icons/ligmite_flag.png" width="30" height="15" class="top-bar_flag">
+		<a href="military.html"><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
+		<a href="military_russian.html"><img src="icons/russian_flag.png" width="30" height="15" class="top-bar_flag"></a>
 	</div>
 	<h1 class="backgrounded">Ligmite Defense Forces</h1>
 	<h2>Chief of Staff</h2>
 	<h3>Maximilian Patrick Kazmierczak</h3>
 	<p>Born 9th April 2014</p>
 	<p>Hired as Chief of Staff of the Ligmite Defense Forces</p>
-	<h1 class="backgrounded">Border Patrol and Guarding</h1>
-	<h2>General</h2>
+	<h1 class="backgrounded">Homeland Security</h1>
+	<h2>Border Security</h2>
 	<h3>Oisín Keely</h3>
 	<p>Born March 3rd 2016</p>
-	<p>General of the Ligmite Border Patrol and Guards</p>
+	<p>General of the Ligmite Border Security</p>
+	<h2>Counterterrorism</h2>
+	<h3>Tymek Maximilian Babaiak</h3>
+	<p>Born October 10th 2014</p>
+	<p>General of the Ligmite Counterterrorism</p>
 </body>
 </html>
