--- a/military_russian.html
+++ b/military_russian.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free State of Ligma | Home</title>
+    <title>Группировки боевиков «Лигмит»</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -69,31 +69,28 @@
 <body>
 	<div class="top-bar">
 		<img src="icons/ligmite_flag.png" width="30" height="15" class="top-bar_flag">
-		<a href="index.html">Home</a>
-		<a href="travel.html">Travel</a>
-		<a href="mfa.html">Ministry of Foreign Affairs</a>
-		<a href="citizenship.html">Apply for Citizenship</a>
-		<a href="party.html">Ligmite Communist Party</a>
-		<a href="military.html">LDF</a>
-		<a href="index.html"><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
-		<a href="index_russian.html"><img src="icons/russian_flag.png" width="30" height="15" class="top-bar_flag"></a>
+		<a href="index_russian.html">Дом</a>
+		<a href="travel_russian.html">Путешествовать</a>
+		<a href="mfa_russian.html">Министерство иностранных дел</a>
+		<a href="citizenship_russian.html">Подать заявление на получение гражданства</a>
+		<a href="party_russian.html">Коммунистическая партия Лигмита</a>
+		<a href="military_russian.html">ЛДФ</a>
+		<a href="military.html"><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
+		<a href="militray_russian.html"><img src="icons/russian_flag.png" width="30" height="15" class="top-bar_flag"></a>
 	</div>
-	<h1>The Free State of Ligma</h1>
-	<h2>Documents</h2>
-	<div style="display: flex; align-items: center; gap: 20px;">
-		<div style="text-align: center;">
-			<h2>Declaration of Sovereignty</h2>
-			<a href="images/declaration_of_soveirgnty.png">
-			<img src="images/declaration_of_soveirgnty.png" height="400" width="300">
-			</a>
-		</div>
-		<div style="text-align: center;">
-			<h2>The Ligmite Constitution</h2>
-			<a href="docs/ligmite_constitution.docx">
-			<img src="images/constitution.png" height="400" width="300">
-		</a>
-	</div>
-</div>
-
+	<h1 class="backgrounded">Силы обороны Лигмита</h1>
+	<h2>Начальник штаба</h2>
+	<h3>Максимилиан Патрик Казмирчак</h3>
+	<p>Дата рождения 9 апреля 2014</p>
+	<p>Принят на должность начальника штаба Сил обороны Лигмита</p>
+	<h1 class="backgrounded">Национальная безопасность</h1>
+	<h2>Безопасность границ</h2>
+	<h3>Ойсин Кили</h3>
+	<p>Родился 3 марта 2016</p>
+	<p>Генерал пограничной безопасности Лигмита</p>
+	<h2>Борьба с терроризмом</h2>
+	<h3>Тымек Максимилиан Бабаяк</h3>
+	<p>Родился 10 октября 2014</p>
+	<p>Генерал Лигмита по борьбе с терроризмом</p>
 </body>
 </html>
