--- a/party_russian.html
+++ b/party_russian.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ligmite Communist Party</title>
+    <title>Коммунистическая партия Лигмита</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -69,37 +69,38 @@
 <body>
 	<div class="top-bar">
 		<img src="icons/ligmite_flag.png" width="30" height="15" class="top-bar_flag">
-		<a href="index.html">Home</a>
-		<a href="travel.html">Travel</a>
-		<a href="mfa.html">Ministry of Foreign Affairs</a>
-		<a href="citizenship.html">Apply for Citizenship</a>
-		<a href="party.html">Ligmite Communist Party</a>
-		<a href="military.html">LDF</a>
+		<a href="index_russian.html">Дом</a>
+		<a href="travel_russian.html">Путешествовать</a>
+		<a href="mfa_russian.html">Министерство иностранных дел</a>
+		<a href="citizenship_russian.html">Подать заявление на получение гражданства</a>
+		<a href="party_russian.html">Коммунистическая партия Лигмита</a>
+		<a href="military_russian.html">ЛДФ</a>
 		<a href="party.html"><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
 		<a href="party_russian.html"><img src="icons/russian_flag.png" width="30" height="15" class="top-bar_flag"></a>
 	</div>
-	<h1 class="backgrounded">Ligmite Communist Party (LCP)</h1>
-	<h2>General Secretary</h2>
-	<h3>Aaron Hugh Mac Dowell da Costa Innecco</h3>
-	<p>Born November 30th 2012</p>
-	<p>Founder and current President of The Free State of Ligma</p>
-	<h2>Politburo Members</h2>
-	<h3>Maximilian Patrick Kazmierczak</h3>
-	<p>Born April 9th 2014</p>
-	<p>Chief of Staff of the Ligmite Defense Forces</p>
-	<h3>Shea White</h3>
-	<p>Born February 13th 2012</p>
-	<p>Policy and Law Maker for The Free State of Ligma</p>
+	<h1 class="backgrounded">Коммунистическая партия Лигмита (ЛКП)</h1>
+	<h2>Генеральный секретарь</h2>
+	<h3>Аарон Хью Мак Доуэлл да Коста Иннекко</h3>
+	<p>Родился 30 ноября 2012</p>
+	<p>Основатель и нынешний президент Свободного государства Лигма</p>
+	<h2>Члены Политбюро</h2>
+	<h3>Максимилиан Патрик Казмирчак</h3>
+	<p>Родился 9 апреля 2014</p>
+	<p>Начальник штаба Лигмитских сил обороны</p>
+	<h3>Ши Уайт</h3>
+	<p>Родился 13 февраля 2012</p>
+	<p>Политик и законодатель Свободного Государства Лигма</p>
 	</body>
-	<h3>Aadheesh Murthy</h3>
-	<p>Born July 3rd 2014</p>
-	<p>Minister of Foreign Affairs for The Free State of Ligma</p>
+	<h3>Аадхиш Мурти</h3>
+	<p>Родился 3 июля 2014</p>
+	<p>Министр иностранных дел Свободного Государства Лигма</p>
 	</body>
-	<h3>Oisín Keely</h3>
-	<p>Born March 3rd 2016</p>
-	<p>General of the Ligmite Border Security</p>
-	<h3>Tymek Maximilian Babaiak</h3>
-	<p>Born October 10th 2014</p>
-	<p>General of the Ligmite Counterterrorism</p>
+	<h3>Ойсин Кили</h3>
+	<p>Родился 3 марта 2016</p>
+	<p>Генерал пограничного патруля и охраны Лигмита</p>
+	</body>
+	<h3>Тымек Максимилиан Бабаяк</h3>
+	<p>Родился 10 октября 2014</p>
+	<p>Генерал Лигмита по борьбе с терроризмом</p>
 	</body>
 </html>
