--- a/travel.html
+++ b/travel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minister of Foreign Affairs of the Free State of Ligma</title>
+    <title>Free State of Ligma | Travel</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -75,7 +75,8 @@
 		<a href="citizenship.html">Apply for Citizenship</a>
 		<a href="party.html">Ligmite Communist Party</a>
 		<a href="military.html">LDF</a>
-		<img src="icons/ligmite_flag.png" width="30" height="15" class="top-bar_flag">
+		<a href=""><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
+		<a href=""><img src="icons/russian_flag.png" width="30" height="15" class="top-bar_flag"></a>
 	</div>
 	<h1 class="backgrounded">The Free State of Ligma</h1>
 	<img src="images/LIGMA_SITE.jpg" width="600", height="400">
