--- a/mfa_russian.html
+++ b/mfa_russian.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free State of Ligma | Home</title>
+    <title>Министр иностранных дел Свободного государства Лигма</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -69,31 +69,23 @@
 <body>
 	<div class="top-bar">
 		<img src="icons/ligmite_flag.png" width="30" height="15" class="top-bar_flag">
-		<a href="index.html">Home</a>
-		<a href="travel.html">Travel</a>
-		<a href="mfa.html">Ministry of Foreign Affairs</a>
-		<a href="citizenship.html">Apply for Citizenship</a>
-		<a href="party.html">Ligmite Communist Party</a>
-		<a href="military.html">LDF</a>
-		<a href="index.html"><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
-		<a href="index_russian.html"><img src="icons/russian_flag.png" width="30" height="15" class="top-bar_flag"></a>
+		<a href="index_russian.html">Дом</a>
+		<a href="travel_russian.html">Путешествовать</a>
+		<a href="mfa_russian.html">Министерство иностранных дел</a>
+		<a href="citizenship_russian.html">Подать заявление на получение гражданства</a>
+		<a href="party_russian.html">Коммунистическая партия Лигмита</a>
+		<a href="military_russian.html">ЛДФ</a>
+		<a href="mfa.html"><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
+		<a href="mfa_russian.html"><img src="icons/russian_flag.png" width="30" height="15" class="top-bar_flag"></a>
 	</div>
-	<h1>The Free State of Ligma</h1>
-	<h2>Documents</h2>
-	<div style="display: flex; align-items: center; gap: 20px;">
-		<div style="text-align: center;">
-			<h2>Declaration of Sovereignty</h2>
-			<a href="images/declaration_of_soveirgnty.png">
-			<img src="images/declaration_of_soveirgnty.png" height="400" width="300">
-			</a>
-		</div>
-		<div style="text-align: center;">
-			<h2>The Ligmite Constitution</h2>
-			<a href="docs/ligmite_constitution.docx">
-			<img src="images/constitution.png" height="400" width="300">
-		</a>
+	<h1 class="backgrounded">Министерство иностранных дел Свободного Государства Лигма</h1>
+	<div id="adi">
+		<h2>Министр</h2>
+		<h3>Адхиш Мурти</h3>
+		<p>Тел.: номер телефона здесь</p>
+		<p>Электронная почта: электронная почта здесь</p>
+		<p>Родился 3 июля 2014</p>
+		<p>Принят на работу в качестве министра иностранных дел Свободного государства Лигма</p>
 	</div>
-</div>
-
 </body>
 </html>
