--- a/travel_russian.html
+++ b/travel_russian.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free State of Ligma | Home</title>
+    <title>Свободное государство Лигма | Путешествовать</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -69,31 +69,41 @@
 <body>
 	<div class="top-bar">
 		<img src="icons/ligmite_flag.png" width="30" height="15" class="top-bar_flag">
-		<a href="index.html">Home</a>
-		<a href="travel.html">Travel</a>
-		<a href="mfa.html">Ministry of Foreign Affairs</a>
-		<a href="citizenship.html">Apply for Citizenship</a>
-		<a href="party.html">Ligmite Communist Party</a>
-		<a href="military.html">LDF</a>
-		<a href="index.html"><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
-		<a href="index_russian.html"><img src="icons/russian_flag.png" width="30" height="15" class="top-bar_flag"></a>
+		<a href="index_russian.html">Дом</a>
+		<a href="travel_russian.html">Путешествовать</a>
+		<a href="mfa_russian.html">Министерство иностранных дел</a>
+		<a href="citizenship_russian.html">Подать заявление на получение гражданства</a>
+		<a href="party_russian.html">Коммунистическая партия Лигмита</a>
+		<a href="military_russian.html">ЛДФ</a>
+		<a href="travel.html"><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
+		<a href="travel_russian.html"><img src="icons/russian_flag.png" width="30" height="15" class="top-bar_flag"></a>
 	</div>
-	<h1>The Free State of Ligma</h1>
-	<h2>Documents</h2>
-	<div style="display: flex; align-items: center; gap: 20px;">
-		<div style="text-align: center;">
-			<h2>Declaration of Sovereignty</h2>
-			<a href="images/declaration_of_soveirgnty.png">
-			<img src="images/declaration_of_soveirgnty.png" height="400" width="300">
-			</a>
-		</div>
-		<div style="text-align: center;">
-			<h2>The Ligmite Constitution</h2>
-			<a href="docs/ligmite_constitution.docx">
-			<img src="images/constitution.png" height="400" width="300">
-		</a>
-	</div>
-</div>
-
+	<h1 class="backgrounded">Свободное государство Лигма</h1>
+	<img src="images/LIGMA_SITE.jpg" width="600", height="400">
+	<h2 class="backgrounded">Цены на визы</h2>
+	<strong>€5 за 2 часа</strong>
+	<br>
+	<strong>€10 за 4 часа</strong>
+	<br>
+	<strong>€15 за 6 часов</strong>
+	<br>
+	<strong>€20 за 8 часов</strong>
+	<br>
+	<strong>€25 за 10 часов</strong>
+	<br>
+	<strong>€30 за 12 часов</strong>
+	<br>
+	<h2 class="backgrounded">Рейсы</h2>
+	<strong>В настоящее время в Свободном государстве Лигма и в Наасе нет аэропортов.</strong>
+	<br>
+	<strong>Тем не менее, вы можете прилететь в Дублин и доехать до нас на такси или автобусе.</strong>
+	<br>
+	<br>
+	<a href="https://www.bing.com/travel/flights?form=HUBFLA&entrypoint=TGHPNT&q=flights&adlt=strict&toWww=1&redig=56FD73DD659B47ED962EBD9AA36D6C6A"><strong>Цены на авиабилеты в Дублин</strong></a>
+	<br>
+	<br>
+	<strong>Автобусы стоят около €3</strong>
+	<br>
+	<br>
 </body>
 </html>
