--- a/citizenship.html
+++ b/citizenship.html
@@ -160,6 +160,7 @@
 
 			if (response.ok) {
 				alert("Application submitted successfully!");
+				window.location = "afterform_citizenship.html";
 			} else {
 				alert("Failed to submit application. Please try again.");
 			}
