--- a/citizenship_russian.html
+++ b/citizenship_russian.html
@@ -160,6 +160,7 @@
 
 			if (response.ok) {
 				alert("Application submitted successfully!");
+				window.locaiton = "afterform_citizenship_russian.html";
 			} else {
 				alert("Failed to submit application. Please try again.");
 			}
