--- a/military_russian.html
+++ b/military_russian.html
@@ -72,7 +72,7 @@
 		<a href="index_russian.html">Дом</a>
 		<a href="travel_russian.html">Путешествовать</a>
 		<a href="mfa_russian.html">Министерство иностранных дел</a>
-		<a href="citizenship_russian.html">Подать заявление на получение гражданства</a>
+		<a href="https://forms.gle/ESzV3LrfNB4uDY786">Подать заявление на получение гражданства</a>
 		<a href="party_russian.html">Коммунистическая партия Лигмита</a>
 		<a href="military_russian.html">ЛДФ</a>
 		<a href="military.html"><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
