--- a/travel.html
+++ b/travel.html
@@ -72,7 +72,7 @@
 		<a href="index.html">Home</a>
 		<a href="travel.html">Travel</a>
 		<a href="mfa.html">Ministry of Foreign Affairs</a>
-		<a href="citizenship.html">Apply for Citizenship</a>
+		<a href="https://forms.gle/ESzV3LrfNB4uDY786">Apply for Citizenship</a>
 		<a href="party.html">Ligmite Communist Party</a>
 		<a href="military.html">LDF</a>
 		<a href=""><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
