--- a/index.html
+++ b/index.html
@@ -89,8 +89,13 @@
 		</div>
 		<div style="text-align: center;">
 			<h2>The Ligmite Constitution</h2>
-			<a href="docs/ligmite_constitution.docx">
+			<a href="images/constitution.png">
 			<img src="images/constitution.png" height="400" width="300">
+		</a>
+			<div style="text-align: center;">
+			<h2>Countries Recognized by The Free State of Ligma</h2>
+			<a href="docs/recognized_countries.docx">
+			<img src="images/recognized.png" height="400" width="300">
 		</a>
 	</div>
 </div>
