--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 			<a href="images/constitution.png">
 			<img src="images/constitution.png" height="400" width="300">
 		</a>
+		<div style="text-align: center;">
 			<div style="text-align: center;">
 			<h2>Countries Recognized by The Free State of Ligma</h2>
 			<a href="docs/recognized_countries.docx">
