--- a/mfa.html
+++ b/mfa.html
@@ -70,13 +70,14 @@
 	<div class="top-bar">
 		<img src="icons/ligmite_flag.png" width="30" height="15" class="top-bar_flag">
 		<a href="index.html">Home</a>
+		<a href="news.html">News</a>
 		<a href="travel.html">Travel</a>
 		<a href="mfa.html">Ministry of Foreign Affairs</a>
 		<a href="https://forms.gle/ESzV3LrfNB4uDY786">Apply for Citizenship</a>
 		<a href="party.html">Ligmite Communist Party</a>
 		<a href="military.html">LDF</a>
-		<a href="mfa.html"><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
-		<a href="mfa_russian.html"><img src="icons/russian_flag.png" width="30" height="15" class="top-bar_flag"></a>
+		<a href="index.html"><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
+		<a href="index_russian.html"><img src="icons/russian_flag.png" width="30" height="15" class="top-bar_flag"></a>
 	</div>
 	<h1 class="backgrounded">Ministry of Foreign Affairs of The Free State of Ligma</h1>
 	<div id="adi">
