--- a/travel.html
+++ b/travel.html
@@ -70,16 +70,27 @@
 	<div class="top-bar">
 		<img src="icons/ligmite_flag.png" width="30" height="15" class="top-bar_flag">
 		<a href="index.html">Home</a>
+		<a href="news.html">News</a>
 		<a href="travel.html">Travel</a>
 		<a href="mfa.html">Ministry of Foreign Affairs</a>
 		<a href="https://forms.gle/ESzV3LrfNB4uDY786">Apply for Citizenship</a>
 		<a href="party.html">Ligmite Communist Party</a>
 		<a href="military.html">LDF</a>
-		<a href=""><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
-		<a href=""><img src="icons/russian_flag.png" width="30" height="15" class="top-bar_flag"></a>
+		<a href="index.html"><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
+		<a href="index_russian.html"><img src="icons/russian_flag.png" width="30" height="15" class="top-bar_flag"></a>
 	</div>
 	<h1 class="backgrounded">The Free State of Ligma</h1>
-	<img src="images/LIGMA_SITE.jpg" width="600", height="400">
+	<img src="images/IMG_0017.jpg" width="600", height="400">
+	<img src="images/IMG_0018.jpg" width="600", height="400">
+	<img src="images/IMG_0020.jpg" width="600", height="400">
+	<img src="images/IMG_0021.jpg" width="600", height="400">
+	<img src="images/IMG_0023.jpg" width="600", height="400">
+	<img src="images/IMG_0024.jpg" width="600", height="400">
+	<img src="images/IMG_0026.jpg" width="600", height="400">
+	<img src="images/IMG_0027.jpg" width="600", height="400">
+	<img src="images/IMG_0030.jpg" width="600", height="400">
+	<img src="images/IMG_0032.jpg" width="600", height="400">
+	<img src="images/IMG_0033.jpg" width="600", height="400">
 	<h2 class="backgrounded">Visa Prices</h2>
 	<strong>€5 for 2 hours</strong>
 	<br>
