--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 	<div class="top-bar">
 		<img src="icons/ligmite_flag.png" width="30" height="15" class="top-bar_flag">
 		<a href="index.html">Home</a>
+		<a href="news.html">News</a>
 		<a href="travel.html">Travel</a>
 		<a href="mfa.html">Ministry of Foreign Affairs</a>
 		<a href="https://forms.gle/ESzV3LrfNB4uDY786">Apply for Citizenship</a>
@@ -89,14 +90,8 @@
 		</div>
 		<div style="text-align: center;">
 			<h2>The Ligmite Constitution</h2>
-			<a href="images/constitution.png">
+			<a href="docs/ligmite_constitution.docx">
 			<img src="images/constitution.png" height="400" width="300">
-		</a>
-		<div style="text-align: center;">
-			<div style="text-align: center;">
-			<h2>Countries Recognized by The Free State of Ligma</h2>
-			<a href="docs/recognized_countries.docx">
-			<img src="images/recognized.png" height="400" width="300">
 		</a>
 	</div>
 </div>
