--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ligmite Communist Party</title>
+    <title>Free State of Ligma | Home</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -79,28 +79,7 @@
 		<a href="index.html"><img src="icons/british_flag.png" width="30" height="15" class="top-bar_flag"></a>
 		<a href="index_russian.html"><img src="icons/russian_flag.png" width="30" height="15" class="top-bar_flag"></a>
 	</div>
-	<h1 class="backgrounded">Ligmite Communist Party (LCP)</h1>
-	<h2>General Secretary</h2>
-	<h3>Aaron Hugh Mac Dowell da Costa Innecco</h3>
-	<p>Born November 30th 2012</p>
-	<p>Founder and current President of The Free State of Ligma</p>
-	<h2>Politburo Members</h2>
-	<h3>Maximilian Patrick Kazmierczak</h3>
-	<p>Born April 9th 2014</p>
-	<p>Chief of Staff of the Ligmite Defense Forces</p>
-	<h3>Shea White</h3>
-	<p>Born February 13th 2012</p>
-	<p>Policy and Law Maker for The Free State of Ligma</p>
-	</body>
-	<h3>Aadheesh Murthy</h3>
-	<p>Born July 3rd 2014</p>
-	<p>Minister of Foreign Affairs for The Free State of Ligma</p>
-	</body>
-	<h3>Oisín Keely</h3>
-	<p>Born March 3rd 2016</p>
-	<p>General of the Ligmite Border Security</p>
-	<h3>Tymek Maximilian Babaiak</h3>
-	<p>Born October 10th 2014</p>
-	<p>General of the Ligmite Counterterrorism</p>
-	</body>
+	<h1>The Ligmite Times</h1>
+	<a href="news/first_building_site_completed.html"><h2>First building site completed!</h2></a>
+</body>
 </html>
